@@ -2,6 +2,7 @@
 
 = 1.9.0 - 2021-xx-xx =
 * Add - New setting to manage whether to enable saving cards during checkout. (Defaults to being enabled).
+* Update - Link customer name on transaction detail page to filtered transaction list page.
 
 = 1.8.0 - 2020-12-16 =
 * Add - Include information about failing payment into order notes.
